[aliases]
build_dist = sdist --formats=gztar,bztar,zip

[build_sphinx]
all-files = 1

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if __name__ == .__main__.:
fail_under = 40
precision = 2
skip_covered = True

[coverage:run]
branch = True
omit =
    hubugs/_version.py

[metadata]
name = hubugs
author = James Rowe
author_email = jnrowe@gmail.com
description = Simple client for GitHub issues
keywords = github bugs cli'
packages = hubugs
include_package_data = True
package_data = {'': ['templates/*/*.mkd', 'templates/*/*.txt'], }
entry_points = {'console_scripts': ['hubugs = hubugs:main', ]}
license = GPL-3
url = https://github.com/JNRowe/hubugs
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Communications
    Topic :: Internet
    Topic :: Software Development
    Topic :: Software Development :: Bug Tracking
    Topic :: Utilities

[tool:pytest]
addopts =
    --cov hubugs --cov-report term-missing --no-cov-on-fail
    --durations=5
    --strict
minversion = 3.2
